[master]
    - Change default behaviour to be more non-invasive: timestamps and owners are NOT set by default per entry.
    - "Open Folder" works again
    - newline separator can now be configured globally
    - Feature 847: Adds title case as a case changer
    - Feature 841: Support for multiple file columns (by noravanq)
    - Fix for bug 1176: automatic bibtexkey generation for authors containing/ending with and in their name
    - Saving order of entries can now be configured per database
    - Improved XMP Privacy (pull request #8)
    - Support FindFullText with ACS DOIs (pull request #9)
    - Fixes groups and adds optional 2.9.2 save ordering (pull request #10)
    - Fixes bug 880 "PubMed Import broken" (pull request #11 by vegeziel)
    - Fixes bug #959 "StringIndexOutOfBoundsException with invalid Preview text" (pull request #13 by IngvarJackal)
    - Fixes bug #960 "FileNotFoundException in Journal abbreviations window" (pull request #13 by IngvarJackal)
2.10
    - Made IEEEXploreFetcher author parsing work again.
    - Added a few more characters in the HTML/Unicode to LaTeX conversion.
    - Find unlinked files tool doesn't always use PDF content importer any more,
      but the dialog opened when a file is dropped into JabRef
    - Uninstaller doesn't delete whole directory any more. Fixes bugs 1142, 1175, 1212.
2.10 beta 3
    - Fix GoogleScholarFetcher (patch 207)
    - Line breaks in BibTeX fields (e.g., abstract and review) are now kept.
    - Fixed completeness indicator in main table for entries with crossrefs and either/or required fields.
    - Fixed [shorttitle] and [veryshorttitle] key generator markers, so they remove punctuation as described
      in the documentation.
2.10 beta 2
    - Patched Windows install script to avoid wrong placement of Start menu items.
    - Reintroduced right-click on type label in entry editor to change entry type.
    - Fixed compatibility issue with OpenOffice plugin
    - Added Russian as language