@@ -1,4 +1,5 @@
 [master]
+    - Make (un)abbreviating journal titles also work on the journaltitle field
     - Change default behaviour to be more non-invasive: timestamps and owners are NOT set by default per entry.
     - "Open Folder" works again
     - newline separator can now be configured globally
